# flask-task-manager

./: .gitignore  README.md  pyproject.toml
flask_intro_todo/: app.py
flask_intro_todo/static/css/: main.css
flask_intro_todo/templates/: base.html  index.html  update.html
