[tool.poetry]
name = "flask-intro-todo"
version = "0.1.0"
description = "A simple task management web application in Flask."
authors = ["i2047 <169206986+i2047@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
